# django_unionbank

./: .gitignore  LICENSE.md  README.md  requirements.txt  setup.cfg
django_unionbank/: apps.py  constants.py  models.py  settings.py  urls.py  utils.py  views.py
django_unionbank/api/: codes.py  customer.py  identity.py  instapay.py  partner_authentication.py  pesonet.py  sandbox.py
django_unionbank/migrations/: 0001_initial.py  0002_fundtransfer_fee.py  0003_auto_20200111_2012.py  0004_pesonetbank.py  0005_sandboxaccount.py
