[metadata]
name = django_unionbank
version = 0.1.1
description = Django app for consuming Unionbank of the Philippines API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jrbenriquez/django_unionbank
author = John Rei Enriquez
author_email = johnrei.enriquez@gmail.com
license = MIT
license_file = LICENSE.md
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
